build templates on the infrastructure
remove Dagger
