# packages/orchestrator/internal/template/server/main.go
@@ -16,6 +16,7 @@ import (
 	"github.com/e2b-dev/infra/packages/orchestrator/internal/sandbox"
 	"github.com/e2b-dev/infra/packages/orchestrator/internal/sandbox/nbd"
 	"github.com/e2b-dev/infra/packages/orchestrator/internal/sandbox/network"
+	sbxtemplate "github.com/e2b-dev/infra/packages/orchestrator/internal/sandbox/template"
 	"github.com/e2b-dev/infra/packages/orchestrator/internal/template/build"
 	"github.com/e2b-dev/infra/packages/orchestrator/internal/template/cache"
 	"github.com/e2b-dev/infra/packages/orchestrator/internal/template/template"
@@ -35,6 +36,7 @@ type ServerStore struct {
 	buildLogger       *zap.Logger
 	templateStorage   *template.Storage
 	artifactsregistry artifactsregistry.ArtifactsRegistry
+	storage           storage.StorageProvider
 	healthStatus      templatemanager.HealthState
 	wg                *sync.WaitGroup // wait group for running builds
 }
@@ -50,6 +52,7 @@ func New(
 	devicePool *nbd.DevicePool,
 	proxy *proxy.SandboxProxy,
 	sandboxes *smap.Map[*sandbox.Sandbox],
+	templateCache *sbxtemplate.Cache,
 ) (*ServerStore, error) {
 	logger.Info("Initializing template manager")
 
@@ -76,6 +79,7 @@ func New(
 		networkPool,
 		proxy,
 		sandboxes,
+		templateCache,
 	)
 
 	store := &ServerStore{
@@ -85,6 +89,7 @@ func New(
 		buildCache:        buildCache,
 		buildLogger:       buildLogger,
 		artifactsregistry: artifactsregistry,
+		storage:           persistence,
 		templateStorage:   templateStorage,
 		healthStatus:      templatemanager.HealthState_Healthy,
 		wg:                &sync.WaitGroup{},
